--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
-    "react-redux": "^9.1.2",
-    "redux-logger": "^3.0.6"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
